tests/errors/semantic/blocking/INSERT_LIST_INCOMPATIBLE_TYPES_2.py
# pylint: disable=missing-function-docstring, missing-module-docstring

a = [1,2,3]
b = (4,5)
a.insert(3, b)

